tests/warn/effect-order.jo
def traceDouble(x: Int): Int = (println x) (x + x)  // error

def main =
  println (traceDouble 5 6)  // error

  1 (println 5) + 2 // error  // error
